# cavass

./: .gitignore  BallScale.h  CMakeLists.txt  CavassData.cpp  CavassData.h  ChunkData.h  ColorData.h  DemonsDialog.cpp  DemonsDialog.h  Dicom.cpp  Dicom.h  DicomInfoFrame.h  Doxyfile  FileHistory.cpp  FileHistory.h  GBScale.h  GScale.h  GaussianTransform.cpp  GaussianTransform.h  Globals.h  GrayScaleTransform.cpp  GrayScaleTransform.h  KMeans.h  PointAndValue.h  Preferences.cpp  Preferences.h  PreferencesDialog.cpp  PreferencesDialog.h  ProcessManager.h  README.md  RampTransform.cpp  RampTransform.h  Scale.h  SnakesDialog.cpp  SnakesDialog.h  SuperUndo.h  TrapezoidTransform.cpp  TrapezoidTransform.h  X.h  Xlib.h  (+35 more)
3dviewnix/: BIM_to_BS0_Signed3DT.sh  argsafter  cat_slice_stack  cat_slice_stack_swab  icon.xb
3dviewnix/FILES/: DISPLAY_V1.0.SPC  SCENE_V1.0.SPC  STRUCTURE_V1.0.SPC
3dviewnix/INCLUDE/: Vdataheader.h  Viewnix.h  Vparam.h  Vtypedef.h
aar/: bscale.PAR  comp_interv.c  edmonds_optimum_branching.hpp  edmonds_optimum_branching_impl.hpp  estimateScale.cpp  mean.c  merge.c  mindst.cpp  rint.c  screen_params.c  vote.c
analyze/: AnalyzeStaticCanvas.cpp  AnalyzeStaticCanvas.h  AnalyzeStaticFrame.cpp  AnalyzeStaticFrame.h  DensityAlgorithm.cpp  DensityAlgorithm.h  DensityCanvas.cpp  DensityCanvas.h  DensityFrame.cpp  DensityFrame.h  InstancesControls.h  KinematicsCommon.h  KinematicsInterCanvas.cpp  KinematicsInterCanvas.h  KinematicsInterFrame.cpp  KinematicsInterFrame.h  KinematicsIntraCanvas.cpp  KinematicsIntraCanvas.h  KinematicsIntraFrame.cpp  KinematicsIntraFrame.h  ROIStatisticalAlgorithm.cpp  ROIStatisticalCanvas.cpp  ROIStatisticalCanvas.h  ROIStatisticalFrame.cpp  ROIStatisticalFrame.h  RefFrameControls.h  SetLayout.h  auto_register.cpp  auto_register.h  build_surf_tree.cpp  build_surf_tree.h
distance/: BoxMuller.h  DistanceTransform3D.cpp  DistanceTransform3D.h  Simple3D.cpp  Simple3D.h  SimpleList3D.cpp  SimpleList3D.h  createPhantom.cpp  simple3ddt.cpp  simplelist3ddt.cpp  specifyPhantom.cpp
filter/: FilterAlgorithms.cpp  FilterCanvas.cpp  FilterCanvas.h  FilterFrame.cpp  FilterFrame.h  GradientImageComputation.cxx  GradientImageComputation.h  HomogeneityCtrl.h  ITKFilterCanvas.cpp  ITKFilterCanvas.h  ITKFilterFrame.cpp  ITKFilterFrame.h  InhomoCtrl.h  LTDT3DCtrl.h  MorphCtrl.h  SBAv3DCtrl.h  ScaleADControls.h  SetFilterIndexControls.h  SigmaControls.h  SizeControls.h
frames/: AlgebraCanvas.cpp  AlgebraCanvas.h  AlgebraFrame.cpp  AlgebraFrame.h  CButton.cpp  CButton.h  CCheckBox.cpp  CCheckBox.h  CComboBox.h  CineControls.h  ClassifyControls.h  ColorControls.h  CovarianceControls.h  CycleCanvas.cpp  CycleCanvas.h  CycleData.h  CycleFrame.cpp  CycleFrame.h  CyclePrint.h  DivThreControls.h  EasyHeaderCanvas.cpp  EasyHeaderCanvas.h  EasyHeaderFrame.cpp  EasyHeaderFrame.h  ExampleCanvas.cpp  ExampleCanvas.h  ExampleFrame.cpp  ExampleFrame.h  ExportCanvas.cpp  ExportCanvas.h  ExportFrame.cpp  ExportFrame.h  FrameControls.h  FromDicomCanvas.cpp  FromDicomCanvas.h  FromDicomControls.h  FromDicomFrame.cpp  FromDicomFrame.h  FunctionControls.h  FuzzCompCanvas.cpp  (+115 more)
frames/segment2d/: PersistentSegment2dFrame.h  (+14 more)
help/: owen2dframe-mac-linux.html  owen2dframe-win.html
itk/: BIM2Meta.cxx  CMakeCache.txt  CMakeLists.txt  ElapsedTime.h  FilterProgress.h  IM02Meta.cxx  ImageRegistration_trans.cxx  Meta2IM0.cxx  itkApproximateSignedDistanceMapImageFilter.cxx  itkBinaryDilateFilter.cxx  itkBinaryErodeFilter.cxx  itkBinaryMedianFilter.cxx  itkBinaryMorphFilter.cxx  itkBinaryOpeningFilter.cxx  itkBinaryThresholdFilter.cxx  itkBinomialBlurFilter.cxx  itkCannyEdgeDetectionFilter.cxx  itkCurvatureAnisotropicDiffusionFilter.cxx  itkCurvatureFlowImageFilter.cxx  itkDanielssonDistanceMapFilter.cxx  itkDerivativeFilter.cxx  itkDifferenceImageFilter.cxx  itkDiscreteGaussianFilter.cxx  itkGradientAnisotropicDiffusionFilter.cxx  itkGradientMagnitudeFilter.cxx  itkGradientMagnitudeRecursiveGaussianFilter.cxx  itkGrayDilateFilter.cxx  itkGrayErodeFilter.cxx  itkIM0VolumeReader.cpp  itkIM0VolumeReader.h  itkIM0VolumeWriter.cpp  itkIM0VolumeWriter.h  itkMeanFilter.cxx  itkMedianFilter.cxx  itkRegistration.cxx  itkRescaleFilter.cxx  itkSigmoidFilter.cxx  itkSignedDanielssonDistanceMapFilter.cxx  itkSignedMaurerDistanceMapFilter.cxx  itkSmoothRecursiveGaussianFilter.cxx  (+2 more)
maxflow/: Makefile  gc.cpp
ml/: README.md  inference.py  python-install-notes.txt
parallel/: ElapsedTime.h  chash.c  chash.cpp  chash.h  chash2.c  chash2.cpp  hheap.c  hheap.cpp  hheap.h  p3dBScaleCompute.c  p3dBScaleCompute.cpp  p3dFuzzyConn.c  p3dFuzzyConn.cpp  p3dFuzzyConn.h  p3dLTDT.cpp  p3dLTDT.h  p3dLTDTMaster.cpp  p3dLTDTSlave.cpp  p3dSBAFilter.c  p3dSBAFilter.cpp  p3dinterpolate.cpp  p3dinterpolate.h  p3dinterpolateMaster.cpp  p3dinterpolateSlave.cpp  paffine.c
port_data/: BIM_to_rover.c  IM0_to_pgm.c  MV0_to_ppm.c  MV0_to_tiff.c  bqml.cpp  exportMath.cpp  fcut.c  fillcontours.cpp  from_BS2.c  from_dicom.cpp  from_dicom.h  imatron_to_IM0.c  importMath.cpp  mipg2dicom.cpp  mkversion.c  queue.c  read_acrnema.cpp  ser_loc.cpp  tif_config.h  tif_dirwrite.c  tif_write.c  tiffio.h  tiffiop.h
registration/: Etime.h  affine.c  bigden.c  biglag.c  deform.c  f2c.h  inittrafo.c  lagmax.c  magnitude.c  matrix.c  newuoa.c  newuob.c  nonrigid.c  slices.c  slices.h  trsapp.c  trstep.c  uobyqa.c  uobyqb.c  update.c
render/: AtoM.cpp  cmput_colrs.cpp  cursorfont.h  cvRender.cpp  cvRender.h  do_cut.cpp  gcode.cpp  load.cpp  make_image.cpp  manip_error.cpp  matrix.cpp  obj_number.cpp  obj_transf.cpp  patch.cpp  patch.h  poly_cut.cpp  project.cpp  reflect.cpp  salloc.cpp  separate.cpp  shade.cpp  view.cpp  view_interp.cpp
scale/: ballScale.cpp
tutorials/: A1.html  A2.html  A3.html  A4.html  B.js  B1.html  B2.html  B_header.js  C_header.js  D_header.js  Glossary.htm  Size.js  Tutorial_intro.htm  a_1.htm  a_2.htm  a_3.htm  a_4.htm  a_5.htm  a_6.htm  b_1.htm  b_2.htm  b_3.htm  b_3.js  b_4.htm  b_4.js  c_1.htm  c_1.js  c_2.htm  c_2.js  c_3.htm  c_3.js  c_4.htm  c_4.js  d_1.htm  d_1.js  d_2.htm  d_2.js  d_3.htm  d_3.js  d_5.htm  (+6 more)
(+142 files in other folders)
